# pyxltree

./: .gitignore  README.md  __init__.py  database.py  example.py  pyproject.toml  test.py  workbooks.py
docs/: for_author.md
docs_dev/: deploy_to_pypi.md  for_author.md  for_contributors.md  todo_list.md
examples/: e_o1o0.py  e_o2o0.py  e_o3o0.py  no_1.py  no_2.py  no_3.py  o1o0.py  o2o0.py  o3o0.py  o4o0_model.py
examples/data/: drive_by_table.csv  drive_by_tree.csv  multiple_root_by_table.csv  multiple_root_by_tree.csv  rainbow.csv  tree_drive_keytyping.csv  tree_multi_root.csv  tree_uneven_coin.csv  tree_word_chain_game.csv  word_chain_game.csv
examples/data/expected/: no_2_word_chain_game_WordChainGame.txt  no_3_uneven_coin_UnevenCoin.txt
src/xltree/: __init__.py  database.py  settings.py  workbooks.py  worksheet_control.py  worksheet_handle.py
src/xltree/database/: __init__.py  input_completion.py  library.py  source_csv_table_analyzer.py  table_formatting.py
src/xltree/models/: line_by_line_leaf.py  tree_structure.py
src/xltree/workbooks/: __init__.py  debugging.py  style.py
src/xltree/worksheet_handle/: __init__.py  draw_tools.py  (+1 more)
tests/: e_o1o0.py  e_o2o0.py  e_o3o0.py  e_o4o0.py  manual.py  no_1.py  no_2.py  no_3.py  no_4.py  no_5.py  no_6.py  o3o1o0.py  o3o2o0_do_not_merge_cells.py  render.py  render_2.py  t_o1o0.py  t_o2o0.py  t_o3o1o0.py  t_o3o2o0_do_not_merge_cells.py  t_o4o0.py  t_o5o0.py  t_o6o0.py  t_o7o0.py  worksheets.py
tests/data/: same_node_text.csv  tree_drive.csv  tree_edge_large_than_node.csv  tree_node_large_than_edge.csv
(+15 files in other folders)
